<resources>
    <string name="app_name">Instagram</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="password_must_have_at_least_6_characters">Password must have at least 6 characters!</string>
    <string name="cant_register">You can\'t register with this email or password</string>
    <string name="please_wait">Please wait...</string>
    <string name="authentication_failed">Authentication failed</string>
</resources>
