<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:context=".RegisterActivity">

    <ImageView android:layout_width="wrap_content" android:layout_height="50dp"
               android:src="@drawable/logo"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:background="@drawable/edittext_background"
              android:hint="@string/username"
              android:layout_marginTop="15dp"
              android:id="@+id/username"
              android:padding="10dp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:background="@drawable/edittext_background"
              android:hint="@string/full_name"
              android:layout_marginTop="15dp"
              android:id="@+id/fullname"
              android:padding="10dp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:background="@drawable/edittext_background"
              android:hint="@string/email"
              android:layout_marginTop="15dp"
              android:inputType="textEmailAddress"
              android:id="@+id/email"
              android:padding="10dp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:background="@drawable/edittext_background"
              android:hint="@string/password"
              android:layout_marginTop="15dp"
              android:inputType="textPassword"
              android:id="@+id/password"
              android:padding="10dp"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"
            android:layout_marginTop="15dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/txt_login"
              android:text="@string/already_have_an_account"
              android:layout_marginTop="15dp"/>

</LinearLayout>